escalonador funcionando 100%